; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_dmobject.c_debugstr_fourcc.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_dmobject.c_debugstr_fourcc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"''\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"'%c%c%c%c'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @debugstr_fourcc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @debugstr_fourcc(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %20

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = trunc i32 %8 to i8
  %10 = load i32, i32* %3, align 4
  %11 = ashr i32 %10, 8
  %12 = trunc i32 %11 to i8
  %13 = load i32, i32* %3, align 4
  %14 = ashr i32 %13, 16
  %15 = trunc i32 %14 to i8
  %16 = load i32, i32* %3, align 4
  %17 = ashr i32 %16, 24
  %18 = trunc i32 %17 to i8
  %19 = call i8* @wine_dbg_sprintf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8 signext %9, i8 signext %12, i8 signext %15, i8 signext %18)
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %7, %6
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i8* @wine_dbg_sprintf(i8*, i8 signext, i8 signext, i8 signext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
